--- a/static/manifest.json
+++ b/static/manifest.json
@@ -7,8 +7,12 @@
   "display": "standalone",
   "background_color": "#FFFFFF",
   "theme_color": "#FF6600",
-
   "icons": [
+    {
+      "src": "/static/icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
     {
       "src": "/static/icons/icon-512.png",
       "sizes": "512x512",
